#1 search dropdown layout break fix

--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -252,7 +252,6 @@
     right: inherit;
     position: absolute;
     top: 1px;
-    margin-left: 270px;
   }
   .search--dropdown .caret {
     top: -1px;
